FIX: fix notification dialog overflow and rendering on deletion

--- a/src/components/common/dialog/styles/NotificationDialog.module.scss
+++ b/src/components/common/dialog/styles/NotificationDialog.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    max-height: 800px;
+    max-height: 600px;
     max-width: 400px;
     background: white;
     top: calc(100% + 5px);
